--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "concurrently": "^6.2.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.0"
+    "mongoose": "^5.13.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
