--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engine": {
+    "node": "14.16.1",
+    "npm": "6.14.12"
+  },
   "scripts": {
     "start": "node server/index.js",
     "server": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"npm run server\" \"cd client && npm run start\""
+    "dev": "concurrently \"npm run server\" \"cd client && npm run start\"",
+    "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "author": "kyusch",
   "license": "ISC",
@@ -17,10 +22,8 @@
     "concurrently": "^6.2.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.0",
-    "yup": "^0.32.9"
+    "mongoose": "^5.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
