--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "server": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run server\" \"cd client && npm run start\"",
+    "con": "concurrently \"npm run start\" \"cd client && npm run start\"",
     "heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
   },
   "author": "kyusch",
